force-app/main/default/objects/Field_History_Tracker__c/Field_History_Tracker__c.object-meta.xml
<CustomObject>
    <label>Field History Tracker</label>
    <nameField>
        <displayFormat>Track-{00000000}</displayFormat>
        <label>Tracking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fields History Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>