force-app/main/default/objects/Field_History_Tracker__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <inlineHelpText>Api Name of Object</inlineHelpText>
    <label>Object</label>
    <length>200</length>
    <type>Text</type>
</CustomField>