force-app/main/default/objects/Field_History_Tracker__c/fields/Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Value__c</fullName>
    <label>Old Value</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>