force-app/main/default/objects/Field_History_Tracker__c/fields/Record__c.field-meta.xml
<CustomField>
    <fullName>Record__c</fullName>
    <formula>HYPERLINK(&#39;/lightning/r/&#39;+ Object__c +&#39;/&#39;+Record_Id__c+&#39;/view&#39;,  Record_Name__c )</formula>
    <label>Record</label>
    <type>Text</type>
</CustomField>