force-app/main/default/objects/Field_History_Tracker__c/fields/Relation__c.field-meta.xml
<CustomField>
    <fullName>Relation__c</fullName>
    <label>Relation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Record</fullName>
            </value>
            <value>
                <fullName>Child Object</fullName>
            </value>
            <value>
                <fullName>Parent Object</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>