force-app/main/default/objects/Field_History_Tracker__c/recordTypes/Field_History.recordType-meta.xml
<RecordType>
    <fullName>Field_History</fullName>
    <active>true</active>
    <description>Track Field  Changes</description>
    <label>Field History</label>
</RecordType>