force-app/main/default/objects/Field_History_Tracker__c/recordTypes/Usage_Tracker.recordType-meta.xml
<RecordType>
    <fullName>Usage_Tracker</fullName>
    <active>true</active>
    <label>Usage Tracker</label>
</RecordType>