force-app/main/default/objects/Field_History_Tracker__c/listViews/Field_Changes.listView-meta.xml
<ListView>
    <fullName>Field_Changes</fullName>
    <columns>NAME</columns>
    <columns>Record__c</columns>
    <columns>Field_Label__c</columns>
    <columns>Object_Label__c</columns>
    <columns>New_Value__c</columns>
    <columns>Old_Value__c</columns>
    <columns>User__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Field_History_Tracker__c.Field_History</value>
    </filters>
    <label>Field Changes</label>
</ListView>