force-app/main/default/objects/Field_History_Tracker__c/listViews/Usage_History.listView-meta.xml
<ListView>
    <fullName>Usage_History</fullName>
    <columns>NAME</columns>
    <columns>Record__c</columns>
    <columns>Object_Label__c</columns>
    <columns>User__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Field_History_Tracker__c.Usage_Tracker</value>
    </filters>
    <label>Usage History</label>
</ListView>